--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="nav_bar">
 
             <div class="nav_name">
-                <h3>Saimon Neupane</h3>
+                <h3>sawar rai</h3>
             </div>
             <div class="nav_name_side">
                 <ul>
